# efmcalculator2

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  revised  setup.py  update_removesduplicates
.github/workflows/: package_and_test.yml
.streamlit/: secrets.toml
efm2-unorganized/: Kevin Yang scan.py  README.md  sequencer.py
efm2-unorganized/new_srs_finder/: setup.py
efm2-unorganized/short_sequence_finder/: SRS_filter.py  setup.py  short_seq_finder.py  test.csv
efm2/new_srs_finder/: plasmid.fasta
efm2/short_sequence_finder/: outputs.csv  short_seq_scan.py
efmcalculator/: EFMSequence.py  SRS_filter.py  StateMachine.py  __init__.py  bad_state_mitigation.py  cli.py  constants.py  efmcalculator.py  features.py  filtering.py  mut_rate_finder.py  mutation_rates.py  parse_inputs.py  post_process.py  short_seq_finder.py  short_seq_scan.py  state_machine.py  utilities.py  visualization.py
efmcalculator/data/: gam_df.csv
efmcalculator/ingest/: EFMSequence.py  parse_inputs.py
efmcalculator/pipeline/: classify_srs_rmd.py  detection_strats.py  features.py  filtering.py  mutation_rates.py  post_process.py  primary_pipeline.py  subsequence_curation.py
efmcalculator/visualization/: eval_top.py  features.py  graph.py  make_webpage.py  rmd.py  srs.py  ssr.py  table.py
efmcalculator/webapp/: SequenceState.py  bokeh_plot.py  state_machine.py  vis_utils.py  webapp.py
efmcalculator2/: StateMachine.py  cli.py  utilities.py
efmcalculator2/data/: gam_df.csv  gam_df_new  gam_df_new.csv
efmcalculator2/ingest/: EFMSequence.py  parse_inputs.py
examples/: L6-10_plasmid_bba.gb
indev/: features.py
modeling/: gam_model_components.RData  input.csv  minimal_model.R  new.csv  python_model.py
short_sequence_finder/: match.csv
tests/: small.fasta  test.csv  test.fasta  test_efm2.py  test_srs.py
(+15 files in other folders)
